confirmacion wornign multiplicadores